--- a/_data/lecture_containrar_och_orkestrering.yml
+++ b/_data/lecture_containrar_och_orkestrering.yml
@@ -1,7 +1,7 @@
 ---
 contentTimeTotal:
   literatureTime: 131
-  optionalLiteratureTime: 116
+  optionalLiteratureTime: 122
 topics:
   - topic: "Containers"
     literatureTime: 11
@@ -39,7 +39,7 @@ topics:
       timeBadge: dark
   - topic: "Docker"
     literatureTime: 63
-    optionalLiteratureTime: 43
+    optionalLiteratureTime: 49
     description-include: docker.md
     literature:
     - title: "Containers? So What? Docker 101 Explained"
@@ -147,6 +147,20 @@ topics:
       description: >
         If you’ve worked with Docker even for a little while, I bet you’ve come across tags. They often look like “my_image_name:1” where the part after the colon is known as a tag. The tag is not always specified when tagging images, but we’ll get
     optionalLiterature:
+    - title: "Using volumes in Docker Compose"
+      url: http://web.archive.org/web/20210325145139/https://devopsheaven.com/docker/docker-compose/volumes/2018/01/16/volumes-in-docker-compose.html
+      timeType: Article
+      timeMinutes: 5
+      timeBadge: info
+      description: >
+        Learn how to declare internal, external, named and host-mounted Docker volumes with these easy Docker Compose examples.
+    - title: "Docker Expose Port: How To Expose or Publish Docker Ports"
+      url: https://www.whitesourcesoftware.com/free-developer-tools/blog/docker-expose-port/
+      timeType: Article
+      timeMinutes: 6
+      timeBadge: info
+      description: >
+        Learn Docker expose ports concepts. Know how to use EXPOSE, --expose, -p, or –P commands to expose or publish Docker ports.
     - title: "Virtual Machines vs Docker Containers - Dive Into Docker"
       url: https://youtube.com/watch?v=TvnZTi_gaNc
       timeType: Video
@@ -184,13 +198,6 @@ topics:
       timeBadge: dark
       description: >
         Learn to build and deploy your distributed applications easily to the cloud with Docker
-    - title: "Using volumes in Docker Compose"
-      url: https://devopsheaven.com/docker/docker-compose/volumes/2018/01/16/volumes-in-docker-compose.html
-      timeType: Article
-      timeMinutes: 5
-      timeBadge: info
-      description: >
-        Learn how to declare internal, external, named and host-mounted Docker volumes with these easy Docker Compose examples.
     - title: "GitHub - 100daysofdevops/21_Days_of_Docker"
       url: https://github.com/100daysofdevops/21_Days_of_Docker
       timeType: Training
